statum-macros/tests/ui/invalid_validators_unknown_machine.stderr
error: Error: no `#[machine]` named `DoesNotExist` was found in module `invalid_validators_unknown_machine`.
       Available `#[machine]` items in this module: TaskMachine.
       Fix: point `#[validators(...)]` at the right machine type in this module.
  --> tests/ui/invalid_validators_unknown_machine.rs:22:1
   |
22 | #[validators(DoesNotExist)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)
